Update Dockerfile to use new packaging method